Fixed bug #42587 (behaviour change regarding symlinked .php files)